--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -11,5 +11,5 @@ $secondary: #f4fcff;
 $tertiary: #f8fbf3; 
 $quaternary:#fff5f5; 
 $quinary: #ffd698;
-$pastel: #d3f0f9;
+$pastelBlue: #d3f0f9;
 $solidWhite: #fff; 
