--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -70,7 +70,9 @@ a {
     text-decoration: none;
     color: inherit;
 }
-img {
-    max-width: 100%;
-    display: block;
+.smallCopy {
+    font-size: 0.6rem;
+    font-weight: bold;
+    margin: 0;
+    line-height: 1.2rem;
 }
