--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -18,3 +18,5 @@
 @import "./partials/setup";
 @import "./partials/variables";
 @import "./partials/typography";
+@import "./partials/baseStyles";
+@import "./partials/nav";
