--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -23,10 +23,12 @@
     top: 0;
     border-top: 1px solid rgba(8, 75, 109, 0.08);
     border-bottom: 1px solid rgba(8, 75, 109, 0.08);
+    background-color: $solidWhite;
     .wrapper {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 20px 0;
     }
     input[type=checkbox] {
         opacity: 0;
@@ -38,12 +40,28 @@
     .menuIcon, .bag {
         margin-right: 15px;
     }
+    .menuIcon {
+        background-color: transparent;
+        border: none;
+    }
     .bag {
         display: flex;
+    }
+    .counter {
+        display: flex;
+        align-items: center;
+        p {
+            width: 24px;
+            height: 24px;
+            background: $primary;
+            border-radius: 50%;
+            color: $solidWhite;
+            text-align: center;
+        }
     }
 }
 
 // Slide Out Nav
 .slideOutNav {
-    display: none;
+    background-color: $primary;
 }
