--- a/styles/styles.css
+++ b/styles/styles.css
@@ -360,6 +360,7 @@ section {
   top: 0;
   border-top: 1px solid rgba(8, 75, 109, 0.08);
   border-bottom: 1px solid rgba(8, 75, 109, 0.08);
+  background-color: #fff;
 }
 .navBar .wrapper {
   display: -webkit-box;
@@ -371,6 +372,7 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 20px 0;
 }
 .navBar input[type=checkbox] {
   opacity: 0;
@@ -385,12 +387,32 @@ section {
 .searchCart .menuIcon, .searchCart .bag {
   margin-right: 15px;
 }
+.searchCart .menuIcon {
+  background-color: transparent;
+  border: none;
+}
 .searchCart .bag {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
+.searchCart .counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.searchCart .counter p {
+  width: 24px;
+  height: 24px;
+  background: #084b6d;
+  border-radius: 50%;
+  color: #fff;
+  text-align: center;
+}
 
 .slideOutNav {
-  display: none;
+  background-color: #084b6d;
 }
