--- a/styles/styles.css
+++ b/styles/styles.css
@@ -296,6 +296,13 @@ a {
   line-height: 1.2rem;
 }
 
+button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
 img {
   max-width: 100%;
   display: block;
@@ -378,6 +385,9 @@ section {
   opacity: 0;
   position: absolute;
 }
+.navBar input[type=checkbox]:checked ~ .slideOutNav {
+  left: 0;
+}
 
 .searchCart {
   display: -webkit-box;
@@ -386,10 +396,6 @@ section {
 }
 .searchCart .menuIcon, .searchCart .bag {
   margin-right: 15px;
-}
-.searchCart .menuIcon {
-  background-color: transparent;
-  border: none;
 }
 .searchCart .bag {
   display: -webkit-box;
@@ -415,4 +421,39 @@ section {
 
 .slideOutNav {
   background-color: #084b6d;
+  position: fixed;
+  top: 0;
+  left: -506px;
+  height: 100vh;
+  width: 100%;
+  max-width: 506px;
+  padding: 35px 50px;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+
+.mainMenu a {
+  font-family: "Young Serif";
+  font-size: 1.6rem;
+  line-height: 2.5rem;
+  color: white;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.mainMenu a:hover, .mainMenu a:focus {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.buttonContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.menuClose {
+  color: #fff;
+  font-size: 1.2rem;
 }
