--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -20,3 +20,5 @@
 @import "./partials/typography";
 @import "./partials/baseStyles";
 @import "./partials/nav";
+@import "./partials/header";
+@import "./partials/sections";
