--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -5,6 +5,15 @@
     .categoryList .items {
         padding: 25px;
     }
+
+    // Footer
+    .footerFlexContainer {
+        flex-direction: column;
+        align-items: center;
+        .footerNav {
+            width: 100%;
+        }
+    }
 }
 
 @media (max-width: 800px) {
@@ -23,6 +32,12 @@
     .categoryList .items {
         padding: 15px;
         margin: 20px 15px;
+    }
+
+    // Play Section
+    .play .wrapper .playContent {
+        width: 100%;
+        padding: 15px;
     }
     
     // Footer
@@ -53,4 +68,5 @@
         flex-direction: column;
         align-items: center;
     }
+}
 }
