--- a/styles/styles.css
+++ b/styles/styles.css
@@ -606,6 +606,19 @@ footer .footerFlexContainer {
   .categoryList .items {
     padding: 25px;
   }
+
+  .footerFlexContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footerFlexContainer .footerNav {
+    width: 100%;
+  }
 }
 @media (max-width: 800px) {
   header .wrapper {
@@ -628,8 +641,26 @@ footer .footerFlexContainer {
     padding: 15px;
     margin: 20px 15px;
   }
+
+  .play .wrapper .playContent {
+    width: 100%;
+    padding: 15px;
+  }
+
+  .footerFlexContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footerFlexContainer .footerNav {
+    width: 100%;
+  }
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) and (max-width: 500px) {
   .categoryList .items {
     width: 100%;
     margin: 10px;
@@ -637,5 +668,25 @@ footer .footerFlexContainer {
 
   .play .wrapper .playContent {
     padding: 10px 10px 15px;
+  }
+
+  .footerNav nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .social {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
