--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -22,5 +22,6 @@
 @import "./partials/nav";
 @import "./partials/header";
 @import "./partials/sections";
+@import "./partials/form";
 @import "./partials/footer";
 @import "./partials/mediaQueries";
